--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "parcel": "^2.12.0",
-    "sass": "^1.26.10"
+    "process": "^0.11.10",
+    "sass": "^1.26.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
+  },
+  "dependencies": {
+    "core-js": "^3.39.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
