--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "events": "^3.3.0",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.12.0",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "sass": "^1.26.10",
     "stream-browserify": "^3.0.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2"
   },
   "dependencies": {
     "core-js": "^3.39.0",
+    "dotenv": "^16.4.5",
     "fractional": "^1.0.0",
     "regenerator-runtime": "^0.14.1"
   }
